# geo-dl-data

./: .gitignore  README.md  apply_shift_ahi_labels.py  band_analysis.py  create_evaluation_dataset.py  create_training_dynamic_features_hdf5_files.py  finalized_labels_with_fldk_cmsk_availability.py  fire_labels.py  generate_fire_labels.py  generate_h8_fldk_clouds.py  pyproject.toml  reproject_rasterize_labels.py  reproject_resample_copdem.py  reproject_resample_landcover.py  update_cloud_mask_on_labels.py  update_no_data_labels.py  utils.py
00_config/: fire_labels_auth.yml
01_fire_masks/: 000_fire_labels.py  001_generate_fire_labels.py  002_filter_fire_lables.py  003_finalized_labels_with_fldk_cmsk_availability.py  generate_fire_labels.py
02_input_data/: 001_generate_h8_fldk_clouds.py  02_unzip_crop_fldk.py  aoi_h8_updated.geojson  unzip_crop_fldk.py
04_pre_processing/: 001_reproject_rasterize_labels.py  002_apply_shift_ahi_labels.py  003_merge_ahi_nonahi_labels.py  004_reproject_crop_cloud_masks.py  005_update_cloud_mask_on_labels.py  006_update_no_data_labels.py  007_reproject_rasterize_crop_biomes.py  008_reproject_resample_copdem.py  009_reproject_resample_landcover.py  apply_shift_ahi_labels.py  merge_ahi_nonahi_labels.py  preprocess_fire_lables.py  reproject_crop_cloud_masks.py  reproject_rasterize_crop_biomes.py  reproject_rasterize_labels.py  update_cloud_mask_on_labels.py  update_no_data_labels.py
05_dataset_preparation/: create_evaluation_dataset.py  create_training_dynamic_features_hdf5_files.py  create_training_static_features_hdf5_file.py
(+10 files in other folders)
