[tool.poetry]
name = "geo-thesis"
version = "0.1"
description = "Master's thesis on active fire detection using geostationary satellite data"
authors = ["jayendra <jayendra.chorapalli@ororatech.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "1.26"
pandas = "2.0"
boto3 = "1.28"
requests = "^2.31.0"
geopandas = "^0.14.0"
pyyaml = "^6.0.1"
matplotlib = "^3.8.1"
ipykernel = "^6.26.0"
python-math = "^0.0.1"
satpy = "^0.44.0"
s3fs = "^2023.10.0"
rasterio = "^1.3.9"
netcdf4 = "^1.6.5"
h5netcdf = "^1.3.0"
rioxarray = "^0.15.0"
tqdm = "^4.66.1"
pystac-client = "^0.7.5"
planetary-computer = "^1.0.0"
logging = "^0.4.9.6"
trash-cli = "^0.23.11.10"
polars = "^0.20.2"
pyarrow = "^14.0.2"
scipy = "^1.12.0"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
